--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
